-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.1
-
None
-
-
1e65b92fe (dev), 6a1accc60 (6.7)
Video not play in Firefox, but does work fine in Chrome/Chromium. The video can play if opened in firefox directly and from application it shows that it started loading it without an error, but nothing is being played on screen.
To reproduce, run attached project in firefox.
There are some errors like these:
QFSFileEngine::open: No file name specified appwasm-video.js:1342:8 Uncaught TypeError: func is undefined anonymous https://.../video/appwasm-video.js line 6147 > Function:5 __emval_call_method https://.../video/appwasm-video.js:6875 invoke_vii https://.../video/appwasm-video.js:16366 invoke_vi https://.../video/appwasm-video.js:16377 anonymous https://...video/appwasm-video.js line 6147 > Function:8 appwasm-video.js line 6147 > Function:5:12
For Gerrit Dashboard: QTBUG-125632 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
563622,2 | wasm: fix video play on Firefox | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
564748,2 | wasm: fix video play on Firefox | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |