wasm: fix video play on Firefox

For whatever reason, the Qt global static was failing to return true or
false and returned the pointer instead.

Fixes: QTBUG-125632
Change-Id: If07fc1c19ca34870f1529ab352d47a9939d93b65
Reviewed-by: Even Oscar Andersen <even.oscar.andersen@qt.io>
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 1e65b92fe3b2714c50e288b357d47eb4225e1ace)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>